manifests/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: local-gateway
      namespace: default
      sectionName: https-grafana
  hostnames:
    - grafana.local
  rules:
    - backendRefs:
        - name: grafana
          port: 3000
